list view of posts , jobs admin panel

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
                     APP_DEBUG=true
                     APP_INSTALL=true
                     APP_LOG_LEVEL=debug
-                    APP_MODE=test
+                    APP_MODE=demo
                     APP_URL=https://backend.hyst.uk
 
                     # DB_CONNECTION=mysql
