--- a/.env
+++ b/.env
@@ -7,19 +7,19 @@
                     APP_MODE=demo
                     APP_URL=https://backend.hyst.uk
 
-                    # DB_CONNECTION=mysql
-                    # DB_HOST=127.0.0.1
-                    # DB_PORT=3306
-                    # DB_DATABASE=nextecki_hyperlocalapp
-                    # DB_USERNAME=root
-                    # DB_PASSWORD=
-                    
                     DB_CONNECTION=mysql
-                    DB_HOST=127.0.0.1                    
+                    DB_HOST=127.0.0.1
                     DB_PORT=3306
-                    DB_DATABASE=hyst_main_db                    
-                    DB_USERNAME=hyst_db_user
-                    DB_PASSWORD=hyst_db_password@123
+                    DB_DATABASE=nextecki_hyperlocalapp
+                    DB_USERNAME=root
+                    DB_PASSWORD=
+                    
+                    # DB_CONNECTION=mysql
+                    # DB_HOST=127.0.0.1                    
+                    # DB_PORT=3306
+                    # DB_DATABASE=hyst_main_db                    
+                    # DB_USERNAME=hyst_db_user
+                    # DB_PASSWORD=hyst_db_password@123
 
                     BROADCAST_DRIVER=log
                     CACHE_DRIVER=file
